@@ -2850,6 +2850,19 @@ SCIP_RETCODE SCIPlpiSetState(
    QS_RETURN(rval);
 }
 
+/** clears current LPi state (like basis information) of the solver */
+SCIP_RETCODE SCIPlpiClearState(
+   SCIP_LPI*             lpi                 /**< LP interface structure */
+   )
+{
+   assert(lpi != NULL);
+
+   /**@todo implement SCIPlpiClearState() for QSopt */
+   SCIPwarningMessage("QSopt interface does not implement SCIPlpiClearState()\n");
+
+   return SCIP_OKAY;
+}
+
 /** frees LPi state information */
 SCIP_RETCODE SCIPlpiFreeState(
    SCIP_LPI*             lpi,                /**< LP interface structure */
